# AutoClean-ML

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: middleware.py
backend/app/api/v1/: datasets.py  pipelines.py  router.py  schemas.py
backend/app/domain/: cleaner.py  engineer.py  exceptions.py  modeler.py  profiler.py
backend/app/infrastructure/: database.py  file_storage.py  models.py  repositories.py
backend/app/workers/: celery_app.py  pipeline_task.py
backend/tests/: conftest.py  test_domain.py
frontend/: package.json  tailwind.config.js
frontend/e2e/: pipeline.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/pipeline/[id]/: page.tsx
frontend/src/components/layout/: ErrorBoundary.tsx  Header.tsx  ThemeToggle.tsx
frontend/src/components/pipeline/: AuditLogTable.tsx
frontend/src/lib/: api.ts  store.ts  types.ts  utils.test.ts  utils.ts
